Created expandable card

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <label for="activityNameInput">Activity name</label>
                 <input type="text" class="form-control" id="activityNameInput" placeholder="Enter the name of the activity">
             </div>
-            <button type="submit" class="btn btn-primary" onclick="addActivity()">Add</button>
+            <button class="btn btn-primary" onclick="addActivity()">Add</button>
         </form>
         <div id="activity-container">
         </div>
