--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-danger">
+    <nav class="navbar navbar-light fixed-top bg-danger">
         <a class="navbar-brand text-light" href="#">SPLIT</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,15 +27,22 @@
             </ul>
         </div>
     </nav>
-    <div class="container-fluid">
-        <form id="today-activities-form">
+    <div id="main-container" class="container-fluid">
+        <form id="add-activity-form">
             <div class="form-group">
                 <label for="activityNameInput">Activity name</label>
-                <input type="text" class="form-control" id="activityNameInput" placeholder="Enter the name of the activity">
+                <input v-model="activityName" type="text" class="form-control" id="activityNameInput" placeholder="Enter the name of the activity">
             </div>
-            <button class="btn btn-primary" onclick="addActivity()">Add</button>
+            <button type="button" class="btn btn-primary" v-on:click="addActivity">Add</button>
         </form>
         <div id="activity-container">
+            <div v-for="activity in activities" class="card">
+                <div class="card-body">
+                    <h5 class="card-title">{{activity.title}}</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">{{activity.timeinterval}}</h6>
+                    <p class="card-text">{{activity.description}}</p>
+                </div>
+            </div>
         </div>
     </div>
     <!-- scripts -->
@@ -44,6 +51,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+    <script src="lib/vue.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 
