improved on content editing

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <form id="add-activity-form">
             <div class="form-group">
                 <label for="activityNameInput">Activity name</label>
-                <input v-model="activityName" type="text" class="form-control" id="activityNameInput" placeholder="Enter the name of the activity">
+                <input v-model="activityName" type="text" class="form-control" id="activityNameInput" placeholder="Tell me what are you doing now">
             </div>
             <button type="button" class="btn btn-primary" v-on:click="addActivity">Add</button>
         </form>
